[workspace]
members = ["cedrus-cedar", "cedrus-core", "cedrus"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
keywords = ["cedar", "authorization", "policy", "security", "rest"]
categories = ["security", "web-programming::http-server"]
repository = "https://github.com/stratusmedia/cedrus"
homepage = "https://github.com/stratusmedia/cedrus"

[workspace.dependencies]
async-trait = "0.1.89"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.101.0"
axum = { version = "0.8.7", features = [ "macros", "http2" ] }
base64 = "0.22.1"
cedar-policy = "4.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
couch_rs = "0.12.1"
dashmap = "6.1.0"
jwt-authorizer = "0.15.0"
openssl = { version = "0.10.75", features = ["vendored"] }
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
redis = { version = "1.0.1", features = ["tokio-rustls-comp", "cluster-async"] }
rustls = { version = "0.23" }
serde = { version = "1.0.228", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = { version = "0.31.1" }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "0.29.0" }
tracing = "0.1.41"
tracing-core = { version = ">=0.1.33" }
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.20", features = ["registry", "std", "fmt"] }
utoipa = { version = "5.4.0", features = ["macros", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v7", "serde", "fast-rng", "macro-diagnostics"]}
