[package]
name = "cedrus-cedar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Cedar Policy serialization and type bindings."
readme = "README.md"

[dependencies]
cedar-policy = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }

[build-dependencies]
prost-build = "0.13.5"

[lib]
path = "src/lib.rs" 
bench = false
test = false
doc = true
