[package]
name = "cedrus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cedrus REST API server for Cedar Policy"
readme = "README.md"

[dependencies]
axum = { workspace = true }
cedar-policy = { workspace = true }
cedrus-cedar = { version = "0.1.0", path="../cedrus-cedar" }
cedrus-core = { version = "0.1.0", path="../cedrus-core" }
chrono = { workspace = true }
clap = { workspace = true }
jwt-authorizer = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio =  { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui ={ workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
mime = "0.3.17"

[lib]
path = "src/lib.rs" 
bench = false
test = false
doc = true

[[bin]]
name = "cedrus"
path = "src/bin/cedrus.rs"
test = false
bench = false
doc = true